tests/miniJava/neg/000127_mutation.MiniJava
class java { public System.out.println void Main ( String [ ] java ) { { } } }
